Archive2/3f/3c2b56e0d4341d/output
main.cpp: In function 'void f(T&&)':
main.cpp:11:34: error: type/value mismatch at argument 1 in template parameter list for 'template<class T> struct name'
 void f(T&& x) { x.template name<B>(); }
                                  ^
main.cpp:11:34: error:   expected a type, got 'B'
main.cpp: At global scope:
main.cpp:15:1: error: expected ',' or ';' at end of input
 }
 ^
